logistic regression done

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ numpy = "^2.2.3"
 pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
 matplotlib = "^3.10.1"
+tqdm = "^4.67.1"
+seaborn = "^0.13.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
